# dll-example

./: README.md
dll/: CMakeLists.txt
dll/src/: engine.cpp
exe/: CMakeLists.txt
exe/src/: main.cpp
include/: interface.h
